[package]
name = "rust_session_store"
version = "0.1.0"
authors = ["isudderth <ian.sudderth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.5.5"
postgres-types = "0.1.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"

#![feature(async_closure)]